added static type checking

--- a/setup.cfg
+++ b/setup.cfg
@@ -33,8 +33,11 @@ packages =
     tarantino
     tarantino.http
     tarantino.websocket
+include_package_data = True
 
+[options.package_data]
+tarantino = py.typed
 
 [options.extras_require]
-dev = flake8; autoflake; isort; black
+dev = flake8; autoflake; isort; black; mypy
 test = uvicorn[standard]
