--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ flake8 = "*"
 isort = "*"
 autoflake = "*"
 uvicorn = {extras = ["standard"], version = "*"}
+mypy = "*"
 
 [requires]
 python_version = "3.10"
