--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,8 @@ isort = "*"
 autoflake = "*"
 uvicorn = {extras = ["standard"], version = "*"}
 mypy = "*"
+docformatter = "*"
+pytest = "*"
 
 [requires]
 python_version = "3.10"
