added pytest as dev dependency

--- a/setup.cfg
+++ b/setup.cfg
@@ -39,5 +39,11 @@ include_package_data = True
 tarantino = py.typed
 
 [options.extras_require]
-dev = flake8; autoflake; isort; black; mypy; pytest
+dev = 
+    flake8
+    autoflake
+    isort
+    black
+    mypy
+    pytest
 test = uvicorn[standard]
